@@ -57,14 +57,14 @@
         <kudu.version>1.16.0</kudu.version>
         <!-- If https://issues.apache.org/jira/browse/CALCITE-5226 is resolved
              remove the commons-dpcp2 in dependency management -->
-        <calcite.version>1.36.0</calcite.version>
-        <guava.version>30.1.1-jre</guava.version>
-        <junit.version>4.13.1</junit.version>
+        <calcite.version>1.34.0</calcite.version>
+        <guava.version>32.1.3-jre</guava.version>
+        <junit.version>4.13.2</junit.version>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <mockito.version>4.6.1</mockito.version>
-        <spotless.version>2.0.1</spotless.version>
-        <freemarker-version>2.3.32</freemarker-version>
+        <spotless.version>2.41.1</spotless.version>
+        <freemarker-version>2.3.30</freemarker-version>
         <json-version>20200518</json-version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -211,7 +211,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-dbcp2</artifactId>
-                <version>2.9.0</version>
+                <version>2.11.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -230,12 +230,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.3.1</version>
                 </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <target>${java.version}</target>
                     <source>${java.version}</source>
@@ -261,7 +261,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.6.3</version>
                 <configuration>
                     <source>${jdk.version}</source>
                 </configuration>
@@ -277,7 +277,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -338,9 +338,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.2.2</version>
                 <configuration>
                   <skipTests>false</skipTests>
+                  <argLine>
+                      --add-opens=java.base/java.net=ALL-UNNAMED
+                      --add-opens=java.base/java.lang=ALL-UNNAMED
+                      --add-opens=java.base/java.util=ALL-UNNAMED
+                  </argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -362,7 +367,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.2.2</version>
                 <configuration>
                   <skipTests>${skipTests}</skipTests>
                 </configuration>
